--- a/Vanilla JS - 1/index.css
+++ b/Vanilla JS - 1/index.css
@@ -1,6 +1,85 @@
 body {
-  background-color: peru;
+  background-color: rgb(255, 255, 255);
 }
 h1 {
-  color: white;
+  all: unset;
+  color: black;
+  font-size: 100px;
+  font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.301);
+  border: 2px solid black;
+  padding: 70px;
+  margin: 6px;
+  display: block;
+  text-align: center;
+}
+#test{
+  font-size: 50px;
+  background-color: rgb(204, 204, 204);
+  text-align: center;
+  font-weight: bold;
+  color: rgb(51, 51, 51); 
+}
+#grid1{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+#left{
+  font-size: 50px;
+  background-color: rgb(49, 49, 49);
+  text-align: center;
+  font-weight: bold;
+  color: rgb(51, 51, 51); 
+  padding: 10px;
+  padding-top: 16px;
+  border-radius: 10px;
+  margin: 5px; 
+}
+button{
+  all: unset;
+  background-color:rgb(173, 173, 173);
+  padding: 10px;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: bold;
+  color: rgb(46, 46, 46);
+  margin: 10px;
+  cursor: pointer;
+}
+.modal{
+  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal_overlay{
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+.modal_content{
+  border-radius: 30px;
+  background-color: white;
+  padding: 50px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  position: relative;
+  top: 0px;
+  width: 20%;
+  text-align: center;
+}
+h2{
+  all: unset;
+  font-size: 60px;
+  font-weight: bold;
+}
+.hidden{
+  display: none;
 }
